fixed overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -222,6 +222,7 @@ a{
 ------------------------------ */
 .hero{
 	padding: 0;
+	overflow-x: hidden;
 }
 
 #hero .owl-nav {
